@@ -2,6 +2,7 @@
 
 = 1.8.3 =
 - Added: Codes for the updated version of Ocean Pro Demos plugin.
+- Added: Enabled support for php code editor with Gutenberg support for my library template.
 
 = 1.8.2 =
 - Updated: WPML translation config file: include ocean post layout.
